--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "line-tutor-bot",
+  "name": "line-render-bot",
   "version": "1.0.0",
-  "type": "module",
   "main": "index.js",
+  "type": "module",
+  "dependencies": {
+    "express": "^4.18.2",
+    "@line/bot-sdk": "^9.0.0"
+  },
   "scripts": {
     "start": "node index.js"
-  },
-  "dependencies": {
-    "@line/bot-sdk": "^7.5.0",
-    "express": "^4.18.2"
   }
 }
